<resources>
    <string name="app_name">Testing Expert</string>
    <string name="start_game">Start Game</string>
    <string name="play_again">Play Again</string>
    <string name="welcome">Welcome to TicTacToe!</string>
    <string name="winner">Congrats! The winner is %s</string>
    <string name="draw">It\'s a draw!</string>
    <string name="game">Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="other_games">More Games</string>
    <string name="moves">Moves: %d</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="same_as_system">Same as system</string>
    <string name="close">Close</string>
</resources>