...
import com.devexperto.testingexpert.ui.board.BoardViewModel
import kotlinx.serialization.Serializable

@Serializable
object Board

const val BOARD_TEST_TAG = "board"

@Composable
fun Board(vm: BoardViewModel = hiltViewModel()) {
    val state by vm.state.collectAsState()

    Board(
...
